fix: css on table buttons

--- a/views/administrator/webcontent/speaker.hbs
+++ b/views/administrator/webcontent/speaker.hbs
@@ -81,7 +81,7 @@
                     <td>{{time}}</td>
                     <td>{{location}}</td>
                     <td>{{biography_short}}</td>
-                    <td>
+                    <td style="width: 40px">
                         <button class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#editSpeakerForm{{speaker_id}}">Edit</button>
                         <div class="modal fade" id="editSpeakerForm{{speaker_id}}" tabindex="-1" role="dialog"
                             aria-labelledby="editSpeakerFormLabel" aria-hidden="true">
@@ -131,7 +131,7 @@
                             </form>
                         </div>
                     </td>
-                    <td>
+                    <td style="width: 58px">
                         <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#delete{{speaker_id}}">
                             Delete
                         </button>
