--- a/public/css/admin_style.css
+++ b/public/css/admin_style.css
@@ -325,9 +325,9 @@ a.sidenav_panel {
     display: inline;
 }
 
-.user_acount_table{
+/* .user_acount_table{
     border: 0.05cm solid grey;
-}
+} */
 
 .user_account_table form{
   margin: 0;
