--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -17,7 +17,7 @@
         <div class="user-account-jumbotron">
             <button class="collapseButton btn btn-primary" type="button" data-toggle="collapse" data-target="#userFilters" aria-expanded="false" aria-controls="collapseExample">Show Filter</button>
             <a href="/admin/adduser"/><button class="addNewUserButton btn btn-success" type="button">Add New User</button></a>
-            <br>
+            <br><br>
             <div class="collapse" id="userFilters">
                 <p>Plant Classifications</p>
                 <input type="radio" style="margin-left: 15px;" id="all" name="plantClassification">Show All
@@ -52,9 +52,9 @@
                     <td style="wdith: 15%;">{{fieldPosition}}</td>
                     <td style="min-width: 50px;">{{businessPhone}}</td>
                  
-                    <td style="width: 10%;"><a href="/admin/useraccounts/{{account_uuid}}"><button class="btn btn-outline-primary user_account_button">Edit user</button></a></td>
+                    <td style="width: 127px;"><a href="/admin/useraccounts/{{account_uuid}}"><button class="btn btn-outline-primary user_account_button">Edit user</button></a></td>
 
-                    <td>
+                    <td style="width: 127px;">
                         <form method="post" action="/deleteUser">
                             <input type="hidden" name="account_uuid" value="{{account_uuid}}">
                             <button type="submit" class="btn btn-outline-danger user_account_button">Delete</button>
