--- a/views/feedback.hbs
+++ b/views/feedback.hbs
@@ -28,13 +28,13 @@
             <td><input type="radio" name="content" value="0"></td>
         </tr>
         <tr class="criteria">
-            <td>Length of Conference</td>
-            <td><input type="radio" name="length" value="1"></td>
-            <td><input type="radio" name="length" value="2"></td>
-            <td><input type="radio" name="length" value="3"></td>
-            <td><input type="radio" name="length" value="4"></td>
-            <td><input type="radio" name="length" value="5"></td>
-            <td><input type="radio" name="length" value="0"></td>
+            <td>Quality of Speaker(s)</td>
+            <td><input type="radio" name="speakerQuality" value="1"></td>
+            <td><input type="radio" name="speakerQuality" value="2"></td>
+            <td><input type="radio" name="speakerQuality" value="3"></td>
+            <td><input type="radio" name="speakerQuality" value="4"></td>
+            <td><input type="radio" name="speakerQuality" value="5"></td>
+            <td><input type="radio" name="speakerQuality" value="0"></td>
         </tr>
         <tr class="criteria">
             <td>Organization of Conference</td>
