defaults for plantClassification and fieldPosition

--- a/views/administrator/user.hbs
+++ b/views/administrator/user.hbs
@@ -30,25 +30,25 @@
         <p><label for="companyName"><b>Company Name *</b></label></p>
         <input type="text" name="companyName" value="{{user.companyName}}" placeholder="{{user.companyName}}"required>
 
-        <p><b>Plant Classification</b></p>
+        <p><b>Plant Classification *</b></p>
         <select name="plantClassification">
-            <option disabled selected value="null_value">select your plant classification</option>
-            <option value="Other">Other</option>
-            <option value="1st Class">1st Class</option>
-            <option value="2nd Class">2nd Class</option>
-            <option value="3rd Class">3rd Class</option>
-            <option value="4th Class">4th Class</option>  
-            <option value="5th Class">5th Class</option>
-            <option value="RPO">RPO</option>
+            <option disabled selected value="null_value" {{defaultDropdown "null_value" user.plantClassification}}>select your plant classification</option>
+            <option value="Other" {{defaultDropdown "Other" user.plantClassification}}>Other</option>
+            <option value="1st Class" {{defaultDropdown "1st Class" user.plantClassification}}>1st Class</option>
+            <option value="2nd Class" {{defaultDropdown "2nd Class" user.plantClassification}}>2nd Class</option>
+            <option value="3rd Class" {{defaultDropdown "3rd Class" user.plantClassification}}>3rd Class</option>
+            <option value="4th Class" {{defaultDropdown "4th Class" user.plantClassification}}>4th Class</option>  
+            <option value="5th Class" {{defaultDropdown "5th Class" user.plantClassification}}>5th Class</option>
+            <option value="RPO" {{defaultDropdown "RPO" user.plantClassification}}>RPO</option>
         </select>
 
-        <p><label for="fieldPosition"><b>Field Position</b></label></p>
+        <p><label for="fieldPosition"><b>Field Position *</b></label></p>
         <select name="fieldPosition">
-            <option disabled selected value="null_value">select your position</option>
-            <option value="Other">Other</option>
-            <option value="Chief Engineer">Chief Engineer</option>
-            <option value="Shift Engineer">Shift Engineer</option>
-            <option value="Operator">Operator</option>
+            <option disabled selected value="null_value" {{defaultDropdown "null_value" user.fieldPosition}}>select your position</option>
+            <option value="Other" {{defaultDropdown "Other" user.fieldPosition}}>Other</option>
+            <option value="Chief Engineer" {{defaultDropdown "Chief Engineer" user.fieldPosition}}>Chief Engineer</option>
+            <option value="Shift Engineer" {{defaultDropdown "Shift Engineer" user.fieldPosition}}>Shift Engineer</option>
+            <option value="Operator" {{defaultDropdown "Operator" user.fieldPosition}}>Operator</option>
         </select>
 
         <p><label for="businessPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Business Phone Number</b> (format: 123-456-7890)</label></p>
