--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -25,23 +25,23 @@
 
                 <p><b>Plant Classification</b></p>
                 <select name="plantClassification">
-                    <option disabled selected value="null_value">select your plant classification</option>
-                    <option value="Other">Other</option>
-                    <option value="1st Class">1st Class</option>
-                    <option value="2nd Class">2nd Class</option>
-                    <option value="3rd Class">3rd Class</option>
-                    <option value="4th Class">4th Class</option>  
-                    <option value="5th Class">5th Class</option>
-                    <option value="RPO">RPO</option>
+                    <option disabled selected value="null_value" {{defaultDropdown "null_value" ../plantClassification}}>select your plant classification</option>
+                    <option value="Other" {{defaultDropdown "Other" ../plantClassification}}>Other</option>
+                    <option value="1st Class" {{defaultDropdown "1st Class" ../plantClassification}}>1st Class</option>
+                    <option value="2nd Class" {{defaultDropdown "2nd Class" ../plantClassification}}>2nd Class</option>
+                    <option value="3rd Class" {{defaultDropdown "3rd Class" ../plantClassification}}>3rd Class</option>
+                    <option value="4th Class" {{defaultDropdown "4th Class" ../plantClassification}}>4th Class</option>  
+                    <option value="5th Class" {{defaultDropdown "5th Class" ../plantClassification}}>5th Class</option>
+                    <option value="RPO" {{defaultDropdown "RPO" ../plantClassification}}>RPO</option>
                 </select>
 
                 <p><label for="fieldPosition"><b>Field Position</b></label></p>
                 <select name="fieldPosition">
-                    <option disabled selected value="null_value">select your position</option>
-                    <option value="Other">Other</option>
-                    <option value="Chief Engineer">Chief Engineer</option>
-                    <option value="Shift Engineer">Shift Engineer</option>
-                    <option value="Operator">Operator</option>
+                    <option disabled selected value="null_value" {{defaultDropdown "null_value" ../fieldPosition}}>select your position</option>
+                    <option value="Other" {{defaultDropdown "Other" ../fieldPosition}}>Other</option>
+                    <option value="Chief Engineer" {{defaultDropdown "Chief Engineer" ../fieldPosition}}>Chief Engineer</option>
+                    <option value="Shift Engineer" {{defaultDropdown "Shift Engineer" ../fieldPosition}}>Shift Engineer</option>
+                    <option value="Operator" {{defaultDropdown "Operator" ../fieldPosition}}>Operator</option>
                 </select>
 
                 <p><label for="businessPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Business Phone Number</b> (format: 123-456-7890)</label></p>
