--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -33,7 +33,7 @@
             <input type="text" name="companyName" required>
 
             <p><b>Plant Classification</b></p>
-            <select name="plantClassification">
+            <select name="plantClassification" id="plantClassification">
                 <option disabled selected value="null_value">select your plant classification</option>
                 <option value="Other">Other</option>
                 <option value="1st Class">1st Class</option>
@@ -45,7 +45,7 @@
             </select>
 
             <p><label for="fieldPosition"><b>Field Position</b></label></p>
-            <select name="fieldPosition">
+            <select name="fieldPosition" id="fieldPosition">
                 <option disabled selected value="null_value">select your position</option>
                 <option value="Other">Other</option>
                 <option value="Chief Engineer">Chief Engineer</option>
