fix: merge side effects
Co-authored-by: orangeappless <wilf.ta0072@gmail.com>
Co-authored-by: akfls100 <k.ysyoobcit@gmail.com>

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -99,7 +99,7 @@
                         </div>
                         <div class="form-group col-md-4">
                             <label for="plantClassification"><b>Plant Classification</b></label>
-                            <select name="plantClassification">
+                            <select name="plantClassification" class="form-control">
                                 <option disabled selected value="null_value" {{defaultDropdown "null_value" ../plantClassification}}>select your plant classification</option>
                                 <option value="Other" {{defaultDropdown "Other" ../plantClassification}}>Other</option>
                                 <option value="1st Class" {{defaultDropdown "1st Class" ../plantClassification}}>1st Class</option>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="form-group col-md-4">
                             <label for="fieldPosition"><b>Field Position</b></label>
-                            <select name="fieldPosition">
+                            <select name="fieldPosition" class="form-control">
                                 <option disabled selected value="null_value" {{defaultDropdown "null_value" ../fieldPosition}}>select your position</option>
                                 <option value="Other" {{defaultDropdown "Other" ../fieldPosition}}>Other</option>
                                 <option value="Chief Engineer" {{defaultDropdown "Chief Engineer" ../fieldPosition}}>Chief Engineer</option>
