--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,15 @@ form {
     color: white;
 }
 
+.IPE_header{
+    grid-area: 1 / 1 / 2 / 6;
+    padding-left: 15px;
+}
+.home-header-text{
+    font-size: 24pt;
+    word-spacing: 5px;
+}
+
 
 .parent {
     display: grid;
@@ -77,6 +86,8 @@ form {
     color: white;
 }
     .child_1 img {
+        width: 100%;
+        grid-area: 1 / 1 / 2 / 2;
     }
 
     .child_2 { 
