--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,9 +3,13 @@
     {{> head}}
 <body>
     {{> menu}}
-    <div class="parent">
 
-        <h1 class="home_slider child_1"><img src="/images/IPE_logo.png" height="100" width="100" alt="IPE Logo">Power Engineering 2020</h1>
+    <div class="parent">
+        <div class="IPE_header">
+            <img src="/images/IPE_logo.png" height="100" width="100" alt="IPE Logo">
+            <span class="home-header-text">Power Engineering 2020</span>
+        </div>
+        {{!-- <h1 class="home_slider child_1">Power Engineering 2020</h1> --}}
 
         <div id="carouselHomeIndicators" class="carousel slide child_2" data-ride="carousel">
             <ol class="carousel-indicators">
