--- a/views/login.hbs
+++ b/views/login.hbs
@@ -20,7 +20,7 @@
                     <input type="text" placeholder="username" name="username" id="username" required>
                 </div>
                 <div>
-                    <input type="password" name="password" id="password" required>
+                    <input type="password" name="password" id="password" placeholder="password" required>
                 </div>
                 <div>
                     <input type="submit" class="form_button" value="Submit" id="login_button" />
