--- a/views/partials/admin_menu.hbs
+++ b/views/partials/admin_menu.hbs
@@ -11,6 +11,7 @@
         <a href="/admin/webcontent/about" {{#if webcontent_aboutisActive}}class="active"{{/if}}>About</a>
         <a href="/admin/webcontent/agenda" {{#if webcontent_agendaisActive}}class="active"{{/if}}>Agenda</a>
         <a href="/admin/webcontent/speakers" {{#if webcontent_speakersisActive}}class="active"{{/if}}>Speakers</a>
+        <a href="/admin/webcontent/calendar" {{#if webcontent_calendarisActive}}class="active"{{/if}}>Calendar</a>
         <a href="/admin/webcontent/contact" {{#if webcontent_contactisActive}}class="active"{{/if}}>Contact</a>
     </div>
 </div>
