--- a/views/login.hbs
+++ b/views/login.hbs
@@ -17,7 +17,7 @@
                 {{/if}}
 
                 <div>
-                    <input type="text" placeholder="username" name="username" id="username" required>
+                    <input type="text" placeholder="username" name="username" id="email" required>
                 </div>
                 <div>
                     <input type="password" name="password" id="password" placeholder="password" required>
