formatted feedback on admin landing page

--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -49,7 +49,7 @@
                     <td style="width: 15%;">{{email}}</td>
                     <td style="width: 13%;">{{companyName}}</td>
                     <td style="width: 10%;" class="plantClassification">{{plantClassification}}</td>
-                    <td style="wdith: 15%;">{{fieldPosition}}</td>
+                    <td style="width: 15%;">{{fieldPosition}}</td>
                     <td style="min-width: 50px;">{{businessPhone}}</td>
                  
                     <td style="width: 127px;"><a href="/admin/useraccounts/{{account_uuid}}"><button class="btn btn-outline-primary user_account_button">Edit user</button></a></td>
