--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -44,6 +44,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/rsvp">My Events</a>
             </li>
+            {{else}}
+            <li class="nav-item">
+                <a class="nav-link" href="/admin">Admin Panel</a>
+            </li>
             {{/unless}}
             <li class="nav-item">
                 <a class="nav-link" href="/profile/{{user.account_uuid}}">Edit Profile</a>
