fix: footer & navbar on login
Co-authored-by: orangeappless <wilf.ta0072@gmail.com>

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,7 +7,7 @@
 
 <body>
     {{> menu}}
-    <div class="container">
+    <div>
         <section id="content">
             <form method="POST" action="/login">
                 <h1>{{heading}}</h1>
@@ -31,5 +31,5 @@
         </section><!-- content -->
     </div><!-- container -->
 </body>
-
+{{> footer}}
 </html>
