--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -57,7 +57,7 @@
             </li>
             {{else}}
             <li class="nav-item">
-                <a class="nav-link" href="/registration">Register</a>
+                <a class="nav-link" href="/registration/type">Register</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
