--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 html,
 body {
     margin: 0;
+    margin-bottom: 10%;
     padding: 0;
     min-height: 100%;
     font-family: Arial, Helvetica, sans-serif;
@@ -161,26 +162,18 @@ form {
     color: black!important;
 }
 
-
 .footer-img {
     float: left;
     width: 25%;
     height: 25%;
-    margin-right: 15px;
+    max-width: 70px;
+    margin: 0 15px;
 }
 
 .footer-p {
     color: white;
+    font-size: 10.5px;
 }
-
-footer {
-    background-color: black;
-    position: relative;
-    left: 0;
-    bottom: -20px;
-    width: 100%;
-}
-
 
 .fa {
     padding: 8px;
@@ -360,4 +353,15 @@ label {
         height: 25%;
         margin-right: 15px;
     }
+}
+
+#footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #111;
+    color: white;
+    margin: auto;
+    font: 15px;
 }
