--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -21,7 +21,7 @@
     <div class="container">
         <form method="post" action="/registerUser">
     {{/if}}
-            <h1>{{heading}}</h1>
+            <h1>{{heading}} ({{type}})</h1>
             <p><i>Please fill in the following fields.</i></p>
             <p><i>A * denotes required information.</i></p>
 
@@ -107,6 +107,8 @@
                     <label for="companyName"><b>Company Name *</b></label>
                     <input type="text" class="form-control" name="companyName" required>
                 </div>
+
+                {{#if type_attendee}}
                 <div class="form-group col-md-4">
                     <label for="plantClassification"><b>Plant Classification</b></label>
                     <select name="plantClassification" class="form-control">
@@ -130,6 +132,15 @@
                         <option value="Operator">Operator</option>
                     </select>
                 </div>
+            {{/if}}
+
+            {{#if type_sponsor}}
+                <input type="hidden" name="fieldPosition" value="Sponsor">
+            {{/if}}
+            {{#if type_vendor}}
+                <input type="hidden" name="fieldPosition" value="Vendor">
+            {{/if}}
+
             </div>
 
             <button type="submit" id="submitRegister" class="btn btn-outline-primary" {{#unless inAdminPanel}}disabled{{/unless}}>Submit</button>
@@ -137,9 +148,7 @@
     </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-{{#unless inAdminPanel}}
 <script src="/static/js/registration.js"></script>
-{{/unless}}
 </body>
 
 {{> footer}}
