Confirmation email upon registration

--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -83,7 +83,7 @@
 
             <label for="email">
                 <span style="display: block; margin: 0 0 3px;"><b>Email Address *</b></span>
-                <input type="email" name="email" required>
+                <input type="email" id="email" required>
             </label>
             <br>
             <label for="address">
@@ -153,6 +153,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="/static/js/registration.js"></script>
+<script src="/static/js/confirmationemail.js"></script>
 </body>
 
 {{> footer}}
