fix: registration vendor/sponsor form

--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -135,9 +135,11 @@
             {{/if}}
 
             {{#if type_sponsor}}
+                <input type="hidden" name="plantClassification" value="Other">
                 <input type="hidden" name="fieldPosition" value="Sponsor">
             {{/if}}
             {{#if type_vendor}}
+                <input type="hidden" name="plantClassification" value="Other">
                 <input type="hidden" name="fieldPosition" value="Vendor">
             {{/if}}
 
