consistency (admin) new usr template same as publc

--- a/views/registration_choose.hbs
+++ b/views/registration_choose.hbs
@@ -20,11 +20,35 @@
     <div class="container">
     {{/if}}
             <h1>{{heading}}</h1>
-            
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><a href="/registration/type/sponsor"><h5>Sponsor</h5></a></li>
-                <li class="list-group-item"><a href="/registration/type/vendor"><h5>Vendor</h5></a></li>
-                <li class="list-group-item"><a href="/registration/type/attendee"><h5>Attendee</h5></a></li>
+
+            <ul class="list-group list-group-flush" style="margin: 2%;">
+                <li class="list-group-item">
+                    {{#unless inAdminPanel}}
+                    <a href="/registration/type/sponsor">
+                    {{else}}
+                    <a href="/admin/adduser/sponsor">
+                    {{/unless}}
+                        <h5>Sponsor</h5>
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    {{#unless inAdminPanel}}
+                    <a href="/registration/type/vendor">
+                    {{else}}
+                    <a href="/admin/adduser/vendor">
+                    {{/unless}}
+                        <h5>Vendor</h5>
+                    </a>
+                </li>
+                <li class="list-group-item">
+                    {{#unless inAdminPanel}}
+                    <a href="/registration/type/attendee">
+                    {{else}}
+                    <a href="/admin/adduser/attendee">
+                    {{/unless}}
+                        <h5>Attendee</h5>
+                    </a>
+                </li>
             </ul>
 
     </div>
