--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -16,7 +16,7 @@
         <br><br>
         <div class="user-account-jumbotron">
             <button class="collapseButton btn btn-primary" type="button" data-toggle="collapse" data-target="#userFilters" aria-expanded="false" aria-controls="collapseExample">Show Filter</button>
-            <a href="/admin/adduser"/><button class="addNewUserButton btn btn-success" type="button">Add New User</button></a>
+            <a href="/admin/adduser/type"/><button class="addNewUserButton btn btn-success" type="button">Add New User</button></a>
             <br><br>
             <div class="collapse" id="userFilters">
                 <p>Plant Classifications</p>
