--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -110,7 +110,7 @@
 
                 {{#if type_attendee}}
                 <div class="form-group col-md-4">
-                    <label for="plantClassification"><b>Plant Classification</b></label>
+                    <label for="plantClassification"><b>Plant Classification *</b></label>
                     <select name="plantClassification" class="form-control">
                         <option disabled selected value="null_value">select your plant classification</option>
                         <option value="Other">Other</option>
@@ -123,7 +123,7 @@
                     </select>
                 </div>
                 <div class="form-group col-md-4">
-                    <label for="fieldPosition"><b>Field Position</b></label>
+                    <label for="fieldPosition"><b>Field Position *</b></label>
                     <select name="fieldPosition" class="form-control">
                         <option disabled selected value="null_value">select your position</option>
                         <option value="Other">Other</option>
