--- a/views/administrator/webcontent/agenda.hbs
+++ b/views/administrator/webcontent/agenda.hbs
@@ -11,8 +11,11 @@
     
     <div class="maincontent">
         {{> menu}}
-    
+
         <h1>{{heading}}</h1>
+        <br>
+        <br>
+    <div class="admin-agenda-jumbotron">
 
         <button class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#addAgendaForm">New Agenda Item</button>
         <!-- Modal -->
@@ -73,8 +76,7 @@
                 </tr>
             {{/each}}
         </table>
-
-        {{> footer}}
+    </div>
     </div>
 </body>
 
