--- a/views/administrator/webcontent/speaker.hbs
+++ b/views/administrator/webcontent/speaker.hbs
@@ -13,6 +13,9 @@
         {{> menu}}
     
         <h1>{{heading}}</h1>
+        <br>
+        <br>
+        <div class="admin-speaker-jumbotron">
 
         <button class="btn btn-outline-success" data-toggle="modal" data-target="#newSpeakerForm">New Speaker</button>
         <div class="modal fade" id="newSpeakerForm{{speaker_id}}" tabindex="-1" role="dialog"
@@ -176,8 +179,10 @@
             </tr>
             {{/each}}
         </table>
+
+        </div>
         </div>
     </div>
 </body>
-{{> footer}}
+
 </html>
